--- a/css/1024.css
+++ b/css/1024.css
@@ -1,13 +1,10 @@
 /* 1024 */
-@media only screen and (min-width: 1024px) {
-
-html {overflow-x: hidden;}
+@media all and (max-width: 1024px) {
 
 body {
-    width: 1024px;
-    margin: 0 auto;
-    background-color: #F94A07;
+  overflow-x: hidden;
 }
+/* optimal c abs */
 .back {
   width: 100%;
   position: absolute;
@@ -16,54 +13,55 @@ body {
 }
 .star1 {
   position: relative;
-  width: 620px;
-  height: 276px;
-  left: 358px;
-  top: -361px;
+  width: 43.05vw;
+  height: 19.16vw;
+  left: 24.86vw;
+  top: -0.208vw;
 }
 .name {
-  position: absolute;
-  width: 1440px;
-  height: 1136px;
-  left: 0px;
-  top: -31px;
+  position: relative;
+  width: 100vw;
+  height: 78.89vw;
+  left: 0vw;
+  top: -21.53vw;
 }
 .r1 {
   position: absolute;
-  width: 1440px;
-  height: 188px;
-  left: 0px;
-  top: 462px;
+  width: 100vw;
+  height: 13.056vw;
+  left: 0vw;
+  top: 32.083vw;
   display: inline-block;
   z-index: 1;
 }
 .star2 {
   position: absolute;
-  width: 540px;
-  height: 311px;
-  left: 874px;
-  top: 582px;
+  width: 37.50vw;
+  height: 21.597vw;
+  left: 60.694vw;
+  top: 40.417vw;
 }
 .star3 {
-  position: absolute;
-  width: 881px;
-  height: 3227px;
-  left: 555px;
-  top: 1895px;
-  display: inline-block;
+  position: relative;
+  width: 61.181vw;
+  height: 224.097vw;
+  left: 38.653vw;
+  top: -689.319vw;
+  overflow: hidden;
+  box-sizing: border-box;
 }
 .star4 {
   position: absolute;
-  width: 308px;
-  left: -15px;
-  top: 3243px;
+  width: 21.389vw;
+  left: -1.042vw;
+  top: 225.208vw;
 }
 .bowl1 {
   position: relative;
-  width: 623px;
-  height: 623px;
-  left: -652px;
-  top: 709px;
+  width: 43.264vw;
+  height: 43.264vw;
+  left: 0.4580vw;
+  top: -63.333vw;
   display: inline-block;
   animation: wiggle6 2.5s infinite;
 }
@@ -75,11 +73,11 @@ body {
   animation: none;
 }
 .bowl2 {
-  position: absolute;
-  width: 623px;
-  height: 623px;
-  left: 398px;
-  top: 709px;
+  position: relative;
+  width: 43.264vw;
+  height: 43.264vw;
+  left: 29.639vw;
+  top: -121.250vw;
   display: inline-block;
   animation: wiggle7 2.5s infinite;
 }
@@ -91,11 +89,11 @@ body {
   animation: none;
 }
 .bowl3 {
-  position: absolute;
-  width: 600px;
-  height: 623px;
-  left: 841px;
-  top: 709px;
+  position: relative;
+  width: 43.264vw;
+  height: 43.264vw;
+  left: 17.361vw;
+  top: -121.250vw;
   display: inline-block;
   animation: wiggle8 2.5s infinite;
 }
@@ -107,11 +105,11 @@ body {
   animation: none;
 }
 .n1 {
-  position: absolute;
-  width: 683px;
-  height: 683px;
-  left: -50px;
-  top: 1164px;
+  position: relative;
+  width: 47.431vw;
+  height: 47.431vw;
+  left: -3.333vw;
+  top: -132.778vw;
   display: inline-block;
   animation: wiggle9 2.5s infinite;
 }
@@ -123,11 +121,11 @@ body {
   animation: none;
 }
 .n2 {
-  position: absolute;
-  width: 683px;
-  height: 640px;
-  left: 375px;
-  top: 1176px;
+  position: relative;
+  width: 47.431vw;
+  height: 44.444vw;
+  left: 26.042vw;
+  top: -185.347vw;
   display: inline-block;
   animation: wiggle10 2.5s infinite;
 }
@@ -139,11 +137,11 @@ body {
   animation: none;
 }
 .n3 {
-  position: absolute;
-  width: 600px;
-  height: 600px;
-  left: 840px;
-  top: 1182px;
+  position: relative;
+  width: 41.667vw;
+  height: 41.667vw;
+  left: 14.167vw;
+  top: -188.125vw;
   display: inline-block;
   animation: wiggle11 2.5s infinite;
 }
@@ -156,18 +154,18 @@ body {
 }
 .r2 {
   position: absolute;
-  width: 1440px;
-  height: 188px;
-  left: 0px;
-  top: 1765px;
+  width: 100vw;
+  height: 13.056vw;
+  left: 0vw;
+  top: 122.569vw;
   display: inline-block;
 }
 .i1 {
   position: relative;
-  width: 392px;
-  height: 849px;
-  left: 7px;
-  top: 1238px;
+  width: 27.222vw;
+  height: 58.958vw;
+  left: -68.125vw;
+  top: -183.472vw;
   display: inline-block;
   animation: wiggle 2.5s infinite;
 }
@@ -180,10 +178,10 @@ body {
 }
 .i2 {
   position: relative;
-  width: 400px;
-  height: 400px;
-  left: -120px;
-  top: 1007px;
+  width: 27.778vw;
+  height: 27.778vw;
+  left: -48.750vw;
+  top: -233.056vw;
   display: inline-block;
   animation: wiggle2 2.5s infinite;
 }
@@ -196,10 +194,10 @@ body {
 }
 .i3 {
   position: relative;
-  width: 400px;
-  height: 400px;
-  left: -237px;
-  top: 1024px;
+  width: 27.778vw;
+  height: 27.778vw;
+  left: -31.181vw;
+  top: -264.792vw;
   display: inline-block;
   animation: wiggle3 2.5s infinite;
 }
@@ -212,10 +210,10 @@ body {
 }
 .i4 {
   position: relative;
-  width: 400px;
-  height: 400px;
-  left: 816px;
-  top: 295px;
+  width: 27.778vw;
+  height: 27.778vw;
+  left: 58.194vw;
+  top: -294.514vw;
   display: inline-block;
   animation: wiggle4 2.5s infinite;
 }
@@ -228,10 +226,10 @@ body {
 }
 .i5 {
   position: relative;
-  width: 400px;
-  height: 400px;
-  left: 635px;
-  top: 275px;
+  width: 27.778vw;
+  height: 27.778vw;
+  left: 45.625vw;
+  top: -296.528vw;
   display: inline-block;
   animation: wiggle5 2.5s infinite;
 }
@@ -244,67 +242,53 @@ body {
 }
 .r3 {
   position: absolute;
-  width: 1440px;
-  height: 188px;
-  left: 0px;
-  top: 2554px;
+  width: 100vw;
+  height: 13.056vw;
+  left: 0vw;
+  top: 177.361vw;
   display: inline-block;
 }
 .plk1 {
   position: relative;
-  height: 764px;
-  left: -810px;
-  top: 1041px;
+  height: 53.056vw;
+  left: -0.139vw;
+  top: -313.264vw;
   display: inline-block;
 }
 .plk2 {
   position: relative;
-  height: 764px;
-  left: 986px;
-  top: 168px;
+  height: 53.056vw;
+  left: 38.542vw;
+  top: -315.764vw;
   display: inline-block;
 }
 .lapsha {
   position: relative;
-  left: 76px;
-  top: 96px;
+  left: 5.278vw;
+  top: -323.750vw;
   z-index: 1;
   display: inline-block;
 }
 .pan1 {
   position: relative;
-  left: 736px;
-  top: -931px;
-  overflow: hidden;
+  left: 51.111vw;
+  top: -394.861vw;
+  display: inline-block;
 }
 .pan2 {
-  position: absolute;
-  width: 1219px;
-  height: 791px;
-  left: -279px;
-  top: 3904px;
-  overflow: hidden;
-}
-.ie1 {
-  position: absolute;
-  width: 494px;
-  height: 741px;
-  left: 1054px;
-  top: 3623px;
-}
-.ie2 {
-  position: absolute;
-  width: 494px;
-  height: 741px;
-  left: 70px;
-  top: 4266px;
+  position: relative;
+  width: 84.653vw;
+  height: 54.931vw;
+  left: -19.38vw;
+  top: -438.95vw;
+  display: inline-block;
 }
 .logo {
   position: absolute;
-  width: 650px;
-  height: 650px;
-  left: 749px;
-  top: 4103px;
+  width: 45.139vw;
+  height: 45.139vw;
+  left: 52.014vw;
+  top: 284.931vw;
   display: inline-block;
   animation-name: rotation;
   animation-duration: 15s;
@@ -312,11 +296,11 @@ body {
   animation-timing-function: linear;
 }
 .logo2 {
-  position: absolute;
-  width: 995px;
-  height: 296px;
-  left: -58px;
-  top: 4746px;
+  position: relative;
+  width: 69.097vw;
+  height: 20.556vw;
+  left: -4.028vw;
+  top: -472.139vw;
 }
 /* text 1440 */
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap');
@@ -325,261 +309,266 @@ h1 {
 }
 .text1 {
   position: relative;
-  width: 1016px;
-  height: 104px;
-  left: 74px;
-  top: -4315px;
+  width: 70.556vw;
+  height: 7.222vw;
+  left: 7.139vw;
+  top: -53.472vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 80px;
-  line-height: 96px;
+  font-size: 5.556vw;
+  line-height: 6.667vw;
   color: #FFCD00;
   display: inline-block;
 }
 .kimchi {
   position: relative;
-  width: 1016px;
-  left: 142px;
-  top: -4018px;
+  width: 70.556vw;
+  left: 11.861vw;
+  top: -75.972vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 80px;
-  line-height: 96px;
+  font-size: 5.556vw;
+  line-height: 6.667vw;
   color: #FFCD00;
   display: inline-block;
 }
 .ramen {
   position: absolute;
-  width: 339px;
-  height: 104px;
-  left: 609px;
-  top: 1162px;
+  width: 23.542vw;
+  height: 7.222vw;
+  left: 44.292vw;
+  top: 80.694vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 80px;
-  line-height: 96px;
+  font-size: 5.556vw;
+  line-height: 6.667vw;
   color: #FFCD00;
 }
 .miso {
   position: absolute;
-  width: 214px;
-  height: 104px;
-  left: 1110px;
-  top: 1158px;
+  width: 14.861vw;
+  height: 7.222vw;
+  left: 78.083vw;
+  top: 80.417vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 80px;
-  line-height: 96px;
+  font-size: 5.556vw;
+  line-height: 6.667vw;
   color: #FFCD00;
 }
 .soba {
   position: relative;
-  width: 214px;
-  height: 104px;
-  left: -839px;
-  top: -3623px;
+  width: 14.861vw;
+  height: 7.222vw;
+  left: -35.833vw;
+  top: -144.931vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 80px;
-  line-height: 96px;
+  font-size: 5.556vw;
+  line-height: 6.667vw;
   color: #FFCD00;
   display: inline-block;
 }
 .somen {
   position: absolute;
-  width: 298px;
-  height: 104px;
-  left: 610px;
-  top: 1553px;
+  width: 20.694vw;
+  height: 7.222vw;
+  left: 42.361vw;
+  top: 107.847vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 80px;
-  line-height: 96px;
+  font-size: 5.556vw;
+  line-height: 6.667vw;
   color: #FFCD00;
 }
 .udon {
   position: absolute;
-  width: 214px;
-  height: 104px;
-  left: 1092px;
-  top: 1550px;
+  width: 14.861vw;
+  height: 7.222vw;
+  left: 78.833vw;
+  top: 107.639vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 80px;
-  line-height: 96px;
+  font-size: 5.556vw;
+  line-height: 6.667vw;
   color: #FFCD00;
 }
 .text2 {
   position: relative;
-  width: 1016px;
-  height: 104px;
-  left: 74px;
-  top: -3441px;
+  width: 70.556vw;
+  height: 7.222vw;
+  left: 7.139vw;
+  top: -227.431vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 80px;
-  line-height: 96px;
+  font-size: 5.556vw;
+  line-height: 6.667vw;
   color: #FFCD00;
   display: inline-block;
 }
 .bambu {
   position: relative;
-  width: 1016px;
-  height: 104px;
-  left: 96px;
-  top: -3233px;
+  width: 70.556vw;
+  height: 7.222vw;
+  left: 9.722vw;
+  top: -232.847vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 64px;
-  line-height: 77px;
+  font-size: 4.444vw;
+  line-height: 5.347vw;
   color: #FFCD00;
   display: inline-block;
 }
 .egg {
   position: relative;
-  width: 1016px;
-  height: 104px;
-  left: 424px;
-  top: -3420px;
+  width: 70.556vw;
+  height: 7.222vw;
+  left: 31.944vw;
+  top: -266.806vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 64px;
-  line-height: 77px;
+  font-size: 4.444vw;
+  line-height: 5.347vw;
   color: #FFCD00;
   display: inline-block;
 }
 .fishcake {
   position: absolute;
-  width: 298px;
-  height: 104px;
-  left: 646px;
-  top: 2368px;
+  width: 20.694vw;
+  height: 7.222vw;
+  left: 44.861vw;
+  top: 164.444vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 64px;
-  line-height: 77px;
+  font-size: 4.444vw;
+  line-height: 5.347vw;
   color: #FFCD00;
 }
 .ceboli {
   position: absolute;
-  width: 214px;
-  height: 104px;
-  left: 961px;
-  top: 2368px;
+  width: 14.861vw;
+  height: 7.222vw;
+  left: 66.6101vw;
+  top: 164.444vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 64px;
-  line-height: 77px;
+  font-size: 4.444vw;
+  line-height: 5.347vw;
   color: #FFCD00;
 }
 .corn {
   position: absolute;
-  width: 214px;
-  height: 104px;
-  left: 1213px;
-  top: 2369px;
+  width: 14.861vw;
+  height: 7.222vw;
+  left: 84.236vw;
+  top: 164.514vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 64px;
-  line-height: 77px;
+  font-size: 4.444vw;
+  line-height: 5.347vw;
   color: #FFCD00;
   display: inline-block;
 }
 .text3 {
   position: relative;
-  width: 1016px;
-  height: 104px;
-  left: 74px;
-  top: -3229px;
+  width: 70.556vw;
+  height: 7.222vw;
+  left: 7.139vw;
+  top: -282.431vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 80px;
-  line-height: 96px;
+  font-size: 5.556vw;
+  line-height: 6.667vw;
   color: #FFCD00;
   display: inline-block;
 }
 .kv {
   position: absolute;
-  width: 1016px;
-  height: 106px;
-  left: 94px;
-  top: 4923px;
+  width: 70.556vw;
+  height: 7.361vw;
+  left: 6.528vw;
+  top: 341.875vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 48px;
-  line-height: 58px;
+  font-size: 3.333vw;
+  line-height: 4.028vw;
   color: #FFCD00;
 }
 .strk1 {
   position: absolute;
-  width: 1536px;
-  height: 125px;
-  left: -98px;
-  top: 491px;
+  width: 106.667vw;
+  height: 8.681vw;
+  left: -6.806vw;
+  top: 34.097vw;
   z-index: 1;
 }
 .strk2 {
   position: absolute;
-  width: 1536px;
-  height: 125px;
-  left: -99px;
-  top: 1794px;
+  width: 106.667vw;
+  height: 8.681vw;
+  left: -6.875vw;
+  top: 124.583vw;
   z-index: 1;
 }
 .strk3 {
   position: absolute;
-  width: 1536px;
-  height: 108px;
-  left: -108px;
-  top: 2584px;
+  width: 106.667vw;
+  height: 7.500vw;
+  left: -7.500vw;
+  top: 179.444vw;
   z-index: 1;
 }
 .ierogl1 {
-  position: absolute;
-  left: 1027px;
-  top: 3515px;
-  font-family: 'Lato';
+  position: relative;
+  left: 71.319vw;
+  top: -431.028vw;
+  font-family: 'Lato', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 200px;
-  line-height: 240px;
+  font-size: 13.889vw;
+  line-height: 16.667vw;
   color: #FFCD00;
   z-index: 1;
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
 .ierogl2 {
-  position: absolute;
-  left: 35px;
-  top: 4187px;
-  font-family: 'Lato';
+  position: relative;
+  left: 2.431vw;
+  top: -476.028vw;
+  width: 50vw;
+  font-family: 'Lato', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 200px;
+  font-size: 13.889vw;
   color: #FFCD00;
   z-index: 1;
+  margin-right: 0;
+
+  display: inline-block;
+  box-sizing: border-box;
+  transition: all 3s ease-in-out;
+  animation: ieroglif 2.5s infinite;
 }
 /* animation 1440 */
 @keyframes rotation {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+  0% { transform: rotate(0deg);}
+  100% { transform: rotate(360deg);}
 }
 @keyframes wiggle {
     0% { transform: rotate(0deg); }
@@ -658,5 +647,11 @@ h1 {
  95% { transform: rotate(-3deg); }
 100% { transform: rotate(0deg); }
 }
-
+@keyframes ieroglif {
+  0% { transform: rotate(0deg); }
+ 80% { transform: rotate(0deg); }
+ 85% { transform: rotate(3deg); }
+ 95% { transform: rotate(-3deg); }
+100% { transform: rotate(0deg); }
+}
 }
