--- a/css/index.css
+++ b/css/index.css
@@ -36,12 +36,13 @@
   top: 40.417vw;
 }
 .star3 {
-  position: absolute;
+  position: relative;
   width: 61.181vw;
   height: 224.097vw;
   left: 38.653vw;
-  top: 133.681vw;
-  display: inline-block;
+  top: -689.319vw;
+  overflow: hidden;
+  box-sizing: border-box;
 }
 .star4 {
   position: absolute;
@@ -53,7 +54,7 @@
   position: relative;
   width: 43.264vw;
   height: 43.264vw;
-  left: -3.542vw;
+  left: 0.4580vw;
   top: -63.333vw;
   display: inline-block;
   animation: wiggle6 2.5s infinite;
@@ -69,7 +70,7 @@
   position: relative;
   width: 43.264vw;
   height: 43.264vw;
-  left: 27.639vw;
+  left: 29.639vw;
   top: -121.250vw;
   display: inline-block;
   animation: wiggle7 2.5s infinite;
@@ -171,10 +172,10 @@
 }
 .i2 {
   position: relative;
-  width: 400px;
-  height: 400px;
-  left: -702px;
-  top: -3356px;
+  width: 27.778vw;
+  height: 27.778vw;
+  left: -48.750vw;
+  top: -233.056vw;
   display: inline-block;
   animation: wiggle2 2.5s infinite;
 }
@@ -272,23 +273,9 @@
   position: relative;
   width: 84.653vw;
   height: 54.931vw;
-  left: -19.375vw;
-  top: -403.750vw;
+  left: -19.38vw;
+  top: -438.95vw;
   display: inline-block;
-}
-.ie1 {
-  position: absolute;
-  width: 34.306vw;
-  height: 51.458vw;
-  left: 73.194vw;
-  top: 251.597vw;
-}
-.ie2 {
-  position: absolute;
-  width: 34.306vw;
-  height: 51.458vw;
-  left: 4.861vw;
-  top: 296.250vw;
 }
 .logo {
   position: absolute;
@@ -303,11 +290,11 @@
   animation-timing-function: linear;
 }
 .logo2 {
-  position: absolute;
+  position: relative;
   width: 69.097vw;
   height: 20.556vw;
   left: -4.028vw;
-  top: 329.861vw;
+  top: -472.139vw;
 }
 /* text 1440 */
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap');
@@ -318,7 +305,7 @@ h1 {
   position: relative;
   width: 70.556vw;
   height: 7.222vw;
-  left: 5.139vw;
+  left: 7.139vw;
   top: -53.472vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
@@ -331,7 +318,7 @@ h1 {
 .kimchi {
   position: relative;
   width: 70.556vw;
-  left: 9.861vw;
+  left: 11.861vw;
   top: -75.972vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
@@ -345,7 +332,7 @@ h1 {
   position: absolute;
   width: 23.542vw;
   height: 7.222vw;
-  left: 42.292vw;
+  left: 44.292vw;
   top: 80.694vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
@@ -358,7 +345,7 @@ h1 {
   position: absolute;
   width: 14.861vw;
   height: 7.222vw;
-  left: 76.083vw;
+  left: 78.083vw;
   top: 80.417vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
@@ -398,7 +385,7 @@ h1 {
   position: absolute;
   width: 14.861vw;
   height: 7.222vw;
-  left: 76.833vw;
+  left: 78.833vw;
   top: 107.639vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
@@ -411,7 +398,7 @@ h1 {
   position: relative;
   width: 70.556vw;
   height: 7.222vw;
-  left: 5.139vw;
+  left: 7.139vw;
   top: -227.431vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
@@ -493,7 +480,7 @@ h1 {
   position: relative;
   width: 70.556vw;
   height: 7.222vw;
-  left: 5.139vw;
+  left: 7.139vw;
   top: -282.431vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
@@ -541,9 +528,9 @@ h1 {
   z-index: 1;
 }
 .ierogl1 {
-  position: absolute;
+  position: relative;
   left: 71.319vw;
-  top: 245.972vw;
+  top: -431.028vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -551,26 +538,31 @@ h1 {
   line-height: 16.667vw;
   color: #FFCD00;
   z-index: 1;
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
 .ierogl2 {
-  position: absolute;
+  position: relative;
   left: 2.431vw;
-  top: 290.764vw;
+  top: -476.028vw;
+  width: 50vw;
   font-family: 'Lato', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 13.889vw;
   color: #FFCD00;
   z-index: 1;
+  margin-right: 0;
+
+  display: inline-block;
+  box-sizing: border-box;
+  transition: all 3s ease-in-out;
+  animation: ieroglif 2.5s infinite;
 }
 /* animation 1440 */
 @keyframes rotation {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+  0% { transform: rotate(0deg);}
+  100% { transform: rotate(360deg);}
 }
 @keyframes wiggle {
     0% { transform: rotate(0deg); }
@@ -649,6 +641,14 @@ h1 {
  95% { transform: rotate(-3deg); }
 100% { transform: rotate(0deg); }
 }
+@keyframes ieroglif {
+  0% { transform: rotate(0deg); }
+ 80% { transform: rotate(0deg); }
+ 85% { transform: rotate(3deg); }
+ 95% { transform: rotate(-3deg); }
+100% { transform: rotate(0deg); }
+}
+
 /*
 html {
 background-color: #F94A07;
