--- a/css/1024.css
+++ b/css/1024.css
@@ -25,30 +25,13 @@ body {
   left: 0vw;
   top: -21.53vw;
 }
-.r1 {
-  position: absolute;
-  width: 100vw;
-  height: 13.056vw;
-  left: 0vw;
-  top: 32.083vw;
-  display: inline-block;
-  z-index: 1;
-}
-.star2 {
-  position: absolute;
-  width: 37.50vw;
-  height: 21.597vw;
-  left: 60.694vw;
-  top: 40.417vw;
-}
 .star3 {
-  position: relative;
-  width: 61.181vw;
-  height: 224.097vw;
-  left: 38.653vw;
-  top: -689.319vw;
-  overflow: hidden;
-  box-sizing: border-box;
+  position: absolute;
+  width: 881px;
+  height: 3227px;
+  left: 571px;
+  top: 1925px;
+  display: inline-block;
 }
 .star4 {
   position: absolute;
@@ -88,6 +71,15 @@ body {
 .wiggle7:hover {
   animation: none;
 }
+.r1 {
+  position: absolute;
+  width: 100vw;
+  height: 13.056vw;
+  left: 0vw;
+  top: 32.083vw;
+  display: inline-block;
+  z-index: 1;
+}
 .bowl3 {
   position: relative;
   width: 43.264vw;
@@ -103,6 +95,13 @@ body {
 }
 .wiggle8:hover {
   animation: none;
+}
+.star2 {
+  position: absolute;
+  width: 37.50vw;
+  height: 21.597vw;
+  left: 60.694vw;
+  top: 40.417vw;
 }
 .n1 {
   position: relative;
@@ -559,11 +558,8 @@ h1 {
   color: #FFCD00;
   z-index: 1;
   margin-right: 0;
-
   display: inline-block;
   box-sizing: border-box;
-  transition: all 3s ease-in-out;
-  animation: ieroglif 2.5s infinite;
 }
 /* animation 1440 */
 @keyframes rotation {
@@ -641,13 +637,6 @@ h1 {
 100% { transform: rotate(0deg); }
 }
 @keyframes wiggle11 {
-  0% { transform: rotate(0deg); }
- 80% { transform: rotate(0deg); }
- 85% { transform: rotate(3deg); }
- 95% { transform: rotate(-3deg); }
-100% { transform: rotate(0deg); }
-}
-@keyframes ieroglif {
   0% { transform: rotate(0deg); }
  80% { transform: rotate(0deg); }
  85% { transform: rotate(3deg); }
