--- a/css/index.css
+++ b/css/index.css
@@ -20,11 +20,11 @@
   top: -21.53vw;
 }
 .star3 {
-  position: absolute;
-  width: 881px;
-  height: 3227px;
-  left: 571px;
-  top: 1925px;
+  position: relative;
+  width: 61.181vw;
+  height: 224.097vw;
+  left: 39.653vw;
+  top: -690.319vw;
   display: inline-block;
 }
 .star4 {
